--- a/index.html
+++ b/index.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/style.css" media="screen"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@0,600;1,600&amp;display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,500;0,600;0,700;1,300;1,500;1,600;1,700&amp;display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap" rel="stylesheet" />
+    <title>Proyecto Individual</title>
 </head>
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top top-nav-collapse w-100 shadow-sm">
-      <div class="container justify-content-between w-100">
-        <a href="index.html" class="navbar-brand logo-image"><img src="./images/logo.svg" alt="Logo Sync" /></a>
+      <div class="container-fluid justify-content-between w-100">
+        <a class="navbar-brand" href="https://factoriaf5.org/"><strong>Réplica web</strong></a>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link fw-bold" href="#">Description</a></li>
-            <li class="nav-item"><a class="nav-link fw-bold" href="#">Features</a></li>
-            <li class="nav-item"><a class="nav-link fw-bold" href="#">Screen</a></li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle fw-bold" href="#" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">Extra</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item fw-bold" href="#">Article Details</a></li>
-              <li><a class="dropdown-item fw-bold" href="#">Terms and Conditions</a></li>
-              <li><a class="dropdown-item fw-bold" href="#">Privacy Policy</a></li>
-            </ul>
-              <li class="nav-item"><a class="btn btn-outline-danger" href="https://factoriaf5.org/" role="button">Download</a></li>
+              <li class="nav-item"><a class="nav-link fw-bold " href="#">Herramientas</a></li>
+              <li class="nav-item"><a class="nav-link fw-bold" href="#">Descargas</a></li>
+              <li class="nav-item">
+                <a class="btn btn-primary rounded-pill" href="https://factoriaf5.org/" role="button">
+                  <input id="talk" type="image" src="/img/ImgNavbar/ventana-de-chat.png" margin-top="5px" height="20px" width="20px"/>
+                  Enviar Feedback</a></li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
+  <section class="pt-5 mt-5 bg-section-primary position-relative">
+    <div class="container">
+      <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center">
+          <h1 class="text-star">¡Muéstranos tu <br> talento <br> programando!</h1>
+          <p>Esta es tu oportunidad para demostrar lo que has aprendido <br>
+            en la ruta de invesigación y las master class.</p>
+      </div>
+    </div>
+  </section>
+  <section></section>
+  <section></section>
+  <section></section>
 </body>
 </html>
