--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top top-nav-collapse w-100 shadow-sm">
       <div class="container-fluid justify-content-between w-100">
         <a class="navbar-brand" href="https://factoriaf5.org/"><strong>Réplica web</strong></a>
+        <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
+        aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i
+        class="fas fa-bars fa-1x"></i></span></button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-auto">
               <li class="nav-item"><a class="nav-link fw-bold " href="#">Herramientas</a></li>
               <li class="nav-item"><a class="nav-link fw-bold" href="#">Descargas</a></li>
               <li class="nav-item">
                 <a class="btn btn-primary rounded-pill" href="https://factoriaf5.org/" role="button">
-                  <input id="talk" type="image" src="/img/ImgNavbar/ventana-de-chat.png" margin-top="5px" height="20px" width="20px"/>
+                  <input id="talk" type="image" src="/img/ImgNavbar/ventana-de-chat.png" height="20px" width="20px"/>
                   Enviar Feedback</a></li>
           </ul>
+          <div class="toggle"></div>
         </div>
       </div>
     </nav>
@@ -37,10 +41,17 @@
           <p>Esta es tu oportunidad para demostrar lo que has aprendido <br>
             en la ruta de invesigación y las master class.</p>
       </div>
+      <div class="row">
+        <img class="image-fluid" src="/img/recurso_movil.png" alt="Screenshot"/>
+      </div>
+    </div>
     </div>
   </section>
   <section></section>
   <section></section>
   <section></section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+  crossorigin="anonymous"></script>
 </body>
 </html>
