--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css" media="screen"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@0,600;1,600&amp;display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,500;0,600;0,700;1,300;1,500;1,600;1,700&amp;display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap" rel="stylesheet" />
@@ -14,42 +14,59 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-custom fixed-top top-nav-collapse w-100 shadow-sm">
-      <div class="container-fluid justify-content-between w-100">
-        <a class="navbar-brand" href="https://factoriaf5.org/"><strong>Réplica web</strong></a>
-        <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
-        aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i
-        class="fas fa-bars fa-1x"></i></span></button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a class="nav-link fw-bold " href="#">Herramientas</a></li>
-              <li class="nav-item"><a class="nav-link fw-bold" href="#">Descargas</a></li>
-              <li class="nav-item">
-                <a class="btn btn-primary rounded-pill" href="https://factoriaf5.org/" role="button">
-                  <input id="talk" type="image" src="/img/ImgNavbar/ventana-de-chat.png" height="20px" width="20px"/>
-                  Enviar Feedback</a></li>
-          </ul>
-          <div class="toggle"></div>
+      <nav class="navbar navbar-expand-lg navbar-custom fixed-top top-nav-collapse w-100 shadow-sm">
+        <div class="container-fluid justify-content-between w-100">
+          <a class="navbar-brand" href="https://factoriaf5.org/"><strong>Réplica web</strong></a>
+          <div class="collapse navbar-collapse text-navbar" id="navbarNavDropdown">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link fw-bold " href="#">Herramientas</a></li>
+                <li class="nav-item"><a class="nav-link fw-bold" href="#">Descargas</a></li>                
+              <button class="btn-navbar">
+                <li class="nav-item">
+                <a class="color-link" href="https://factoriaf5.org/" role="button">
+                <input class="talk" type="image" src="/img/ImgNavbar/ventana-de-chat.png" height="20px" width="20px"/>
+                Enviar Feedback</a></li>
+              </button>
+            </ul>
+            <div class="toggle"></div>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
   </header>
-  <section class="pt-5 mt-5 bg-section-primary position-relative">
-    <div class="container">
-      <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center">
-          <h1 class="text-star">¡Muéstranos tu <br> talento <br> programando!</h1>
-          <p>Esta es tu oportunidad para demostrar lo que has aprendido <br>
-            en la ruta de invesigación y las master class.</p>
-      </div>
-      <div class="row">
-        <img class="image-fluid" src="/img/recurso_movil.png" alt="Screenshot"/>
-      </div>
+
+  <section class="contenedor-1">
+    <div class="text-1">
+        <h1 class="h1-1">¡Muéstranos tu <br> talento <br> programando!</h1>
+        <p class="p-1">Esta es tu oportunidad para demostrar lo que has aprendido <br>
+          en la ruta de invesigación y las master class.</p>
     </div>
+    <div class="iphone">
+      <div class="purple-circle"></div>
+        <img class="img-iphone" src="/img/recurso_movil.png" alt="Screenshot"/>
     </div>
   </section>
+
+  <section class="contenedor-2">
+    <div class="text-2">
+      <h1 class="h1-2">Y toma nota...<br> de lo que seguirás<br> aprendiendo.
+          <a class="btn-factoria" href="https://factoriaf5.org/" role="button">Factoría f5</a>
+      </h1>
+    </div>
+  </section>
+
   <section></section>
   <section></section>
-  <section></section>
+  <div class="footer-basic">
+    <footer>
+      <p class="copyright">©factoriaF5.</p>
+        <ul>
+            <li class="footer-list"><a href="#">Privacity</a></li>
+            <li class="footer-list">Terms</li>
+            <li class="footer-list"><a href="#">FAQ</a></li>
+        </ul>
+        
+    </footer>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
   crossorigin="anonymous"></script>
