--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p class="copyright">©factoriaF5.</p>
         <ul>
             <li class="footer-list"><a href="#">Privacity</a></li>
-            <li class="footer-list">Terms</li>
+            <li class="footer-list"><a href="#">Terms</a></li>
             <li class="footer-list"><a href="#">FAQ</a></li>
         </ul>
         
